<resources>
    <string name="app_name">To-Do List</string>
    <string name="add_new_category">add new category</string>
    <string name="projects">Projects</string>
    <string name="task_0">0 Task</string>
    <string name="personal">Personal</string>
    <string name="personalImage">personalImage</string>
    <string name="meeting">Meeting</string>
    <string name="meetingImage">meetingImage</string>
    <string name="work">Work</string>
    <string name="workImage">workImage</string>
    <string name="study">Study</string>
    <string name="studyImage">studyImage</string>
    <string name="shopping">Shopping</string>
    <string name="shoppingImage">shoppingImage</string>
    <string name="add_category">Add Category</string>
    <string name="btn_add">Add</string>
    <string name="dashboard">dashboard</string>
    <string name="hello">Hello %s</string>
    <string name="category_already_exists">Category Already Exists</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tasks">Tasks</string>
    <string name="check">check</string>
    <string name="time">Time</string>
    <string name="Task">Task</string>
    <string name="new_task">Add New Task</string>
    <string name="choose_date">Choose date</string>
    <string name="add_task">Add Task</string>
    <string name="date">Date</string>
    <string name="list">list</string>
    <string name="main_text">No %s</string>
    <string name="sub_text">You have no %s.</string>
    <string name="category">category</string>
    <string name="task">task</string>
    <string name="image">image</string>
    <string name="enter_your_name">Enter your name.</string>
    <string name="get_started">Get Started</string>
    <string name="new_task_error_message">%s cannot be empty.</string>
    <string name="Title">Title</string>
    <string name="date_time">Time</string>
    <string name="how_many_task">%d Task</string>
    <string name="Category">Category</string>
    <string name="edit_task">Edit Task</string>
    <string name="filter_all">All</string>
    <string name="filter_completed">Completed</string>
    <string name="filter_uncompleted">UnCompleted</string>
    <string name="delete">Delete</string>
    <string name="do_you_want_to_delete_the_task">Do you want delete the tasks?</string>
    <string name="positive_btn_yes">Yes</string>
    <string name="negative_btn_no">No</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at augue ut magna tincidunt ornare. Pellentesque interdum lobortis finibus. Suspendisse potenti. Vestibulum vitae urna ut lacus auctor tincidunt a non odio. Aenean at augue ut nisi aliquam vehicula nec eu tellus. Donec tempus rutrum mi, ut congue augue ultricies ac. Fusce convallis finibus ipsum.</string>
    <string name="tasks_have">Today you have %d tasks</string>
    <string name="date_time_choosen">%s %s</string>
</resources>