<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.TaskFragment">

    <ImageView
        android:id="@+id/dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/dashboard"
        android:orientation="horizontal"
        android:src="@drawable/dashboard_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dashboard_hello_margin_top"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:textSize="@dimen/hello_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineProjectStart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dashboard_name_margin_top"
        android:textColor="@color/white"
        android:textSize="@dimen/name_text_size"
        app:layout_constraintEnd_toEndOf="@+id/tvWelcome"
        app:layout_constraintStart_toStartOf="@+id/tvWelcome"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <TextView
        android:id="@+id/tvTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/task_margin_top"
        android:text="@string/tasks"
        android:textColor="@color/task_text"
        android:textSize="@dimen/task_text_size"
        app:layout_constraintStart_toStartOf="@+id/guidelineProjectStart"
        app:layout_constraintTop_toBottomOf="@+id/dashboard" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/scroll_height"
        android:layout_marginStart="@dimen/scroll_margin_start"
        android:layout_marginEnd="@dimen/scroll_margin_end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineProjectEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineProjectStart"
        app:layout_constraintTop_toBottomOf="@+id/tvTask">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin_end"
        android:layout_marginBottom="@dimen/fab_margin_bottom"
        android:contentDescription="@string/add_new_category"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineProjectStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guide_line_begin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineProjectEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guide_line_end" />

</androidx.constraintlayout.widget.ConstraintLayout>