<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <EditText
            android:id="@+id/etTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:background="@drawable/new_task_edit_text_background"
            android:hint="@string/Task"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/dark_blue"
            android:textColorHint="@color/light_blue"
            app:layout_constraintBottom_toTopOf="@+id/tvTimeError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTimeError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textSize="@dimen/tv_time_error_text_size"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/lChooseDate"
            app:layout_constraintEnd_toEndOf="@id/lChooseDate"
            app:layout_constraintStart_toStartOf="@id/lChooseDate"
            app:layout_constraintTop_toBottomOf="@+id/etTask" />

        <LinearLayout
            android:id="@+id/lChooseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/new_task_edit_text_background"
            android:orientation="horizontal"
            android:padding="@dimen/choose_date_padding"
            app:layout_constraintBottom_toTopOf="@+id/tvChooseDateShow"
            app:layout_constraintEnd_toEndOf="@id/btnAddTask"
            app:layout_constraintStart_toStartOf="@id/btnAddTask"
            app:layout_constraintTop_toBottomOf="@+id/tvTimeError"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/tvChooseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/choose_date_text_margin_start"
                android:text="@string/choose_date"
                android:textColor="@color/dark_blue"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/down_arrow_margin_start"
                android:background="@drawable/ic_arrow_down"
                android:contentDescription="@string/time"
                app:layout_constraintVertical_chainStyle="spread_inside" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvChooseDateShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_blue"
            app:layout_constraintBottom_toTopOf="@id/btnAddTask"
            app:layout_constraintEnd_toEndOf="@id/lChooseDate"
            app:layout_constraintStart_toStartOf="@id/lChooseDate"
            app:layout_constraintTop_toBottomOf="@+id/lChooseDate" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:paddingStart="96dp"
            android:paddingTop="12dp"
            android:paddingEnd="96dp"
            android:paddingBottom="12dp"
            android:text="@string/add_task"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvChooseDateShow" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBegin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>